# pywin32

./: i686-w64-mingw32.conf  meson.build
Pythonwin/: meson.build
Pythonwin/Scintilla/: meson.build
SWIG/swig_lib/python/: pywintypes.i
com/: meson.build
win32/: meson.build
win32/Lib/: win32timezone.py
win32/src/: PyHANDLE.cpp  PyOVERLAPPED.cpp  PySECURITY_DESCRIPTOR.cpp  PyWAVEFORMATEX.cpp  PyWinTypesmodule.cpp  PythonService.cpp  odbc.cpp  timermodule.cpp  win2krasmodule.cpp  win32apimodule.cpp  win32clipboardmodule.cpp  win32credmodule.cpp  win32event.i  win32file_comm.cpp  win32gui.i  win32inet.i  win32inet_winhttp.cpp  win32lzmodule.cpp  win32pdhmodule.cpp  win32process.i  win32profilemodule.cpp  win32rasmodule.cpp  win32security.i  win32security_ds.cpp  win32security_sspi.h  win32trace.cpp  win32tsmodule.cpp  wincerapi_reg.cpp
win32/src/PerfMon/: PyPerfMon.cpp  PyPerfMsgs.mc  perfmondata.cpp
win32/src/win32crypt/: PyCRYPTPROV.cpp  win32cryptmodule.cpp
win32/src/win32wnet/: PyNCB.cpp  PyNetresource.cpp  win32wnet.cpp
