pythonwin_inc = include_directories('.')

pythonwin_src = files(
  'dbgthread.cpp',
  'ddeconv.cpp',
  'ddeitem.cpp',
  'ddemodule.cpp',
  'ddeserver.cpp',
  'ddetopic.cpp',
  'dibapi.cpp',
  'dllmain.cpp',
  'pythondoc.cpp',
  'pythonppage.cpp',
  'pythonpsheet.cpp',
  'pythonRichEditCntr.cpp',
  'pythonRichEdit.cpp',
  'pythonRichEditDoc.cpp',
  'pythonview.cpp',
  'pythonwin.cpp',
  'stdafx.cpp',
  'stdafxole.cpp',
  'stdafxpw.cpp',
  'stddde.cpp',
  'win32app.cpp',
  'win32assoc.cpp',
  'win32bitmap.cpp',
  'win32brush.cpp',
  'win32cmd.cpp',
  'win32cmdui.cpp',
  'win32context.cpp',
  'win32control.cpp',
  'win32ctledit.cpp',
  'win32ctrlList.cpp',
  'win32ctrlRichEdit.cpp',
  'win32ctrlTree.cpp',
  'win32dc.cpp',
  'win32dlgbar.cpp',
  'win32dlg.cpp',
  'win32dll.cpp',
  'win32doc.cpp',
  'win32font.cpp',
  'win32gdi.cpp',
  'win32ImageList.cpp',
  'win32menu.cpp',
  'win32notify.cpp',
  'win32oleDlgInsert.cpp',
  'win32oleDlgs.cpp',
  'win32pen.cpp',
  'win32prinfo.cpp',
  'win32prop.cpp',
  'win32rgn.cpp',
  'win32RichEdit.cpp',
  'win32RichEditDocTemplate.cpp',
  'win32splitter.cpp',
  'win32template.cpp',
  'win32thread.cpp',
  'win32toolbar.cpp',
  'win32tooltip.cpp',
  'win32uimodule.cpp',
  'win32uioleClientItem.cpp',
  'win32uiole.cpp',
  'win32uioledoc.cpp',
  'win32util.cpp',
  'win32view.cpp',
  'win32virt.cpp',
  'win32win.cpp',
)
