com_inc = include_directories(
  'win32comext/shell/src',
  'win32comext/ifilter/src',
  'win32comext/axscript/src',
  'win32comext/taskscheduler/src',
  'win32comext/authorization/src',
  'win32comext/axcontrol/src',
  'win32comext/adsi/src',
  'win32comext/mapi/src',
  'win32comext/axdebug/src',
  'win32comext/directsound/src',
  'win32comext/propsys/src',
  'win32comext/internet/src',
  'win32comext/bits/src',
  'win32com/src/include',
  'win32com/src/extensions',
)

com_src = files(
  'win32comext/shell/src/PyINameSpaceTreeControl.cpp',
  'win32comext/shell/src/PyIExplorerCommand.cpp',
  'win32comext/shell/src/PyIDeskBand.cpp',
  'win32comext/shell/src/PyIDockingWindow.cpp',
  'win32comext/shell/src/PyITaskbarList.cpp',
  'win32comext/shell/src/PyIShellView.cpp',
  'win32comext/shell/src/PyIDropTargetHelper.cpp',
  'win32comext/shell/src/PyIColumnProvider.cpp',
  'win32comext/shell/src/PyIPersistFolder2.cpp',
  'win32comext/shell/src/PyIShellFolder.cpp',
  'win32comext/shell/src/PyIEnumIDList.cpp',
  'win32comext/shell/src/PyIInputObject.cpp',
  'win32comext/shell/src/PyIObjectCollection.cpp',
  'win32comext/shell/src/PyIShellLink.cpp',
  'win32comext/shell/src/PyIShellIconOverlay.cpp',
  'win32comext/shell/src/PyIExtractIcon.cpp',
  'win32comext/shell/src/PyITransferDestination.cpp',
  'win32comext/shell/src/PyIEnumObjects.cpp',
  'win32comext/shell/src/PyIExtractIconW.cpp',
  'win32comext/shell/src/PyIContextMenu.cpp',
  'win32comext/shell/src/PyIBrowserFrameOptions.cpp',
  'win32comext/shell/src/PyIShellItem2.cpp',
  'win32comext/shell/src/PyIShellIcon.cpp',
  'win32comext/shell/src/PyIEnumExplorerCommand.cpp',
  'win32comext/shell/src/PyIShellLibrary.cpp',
  'win32comext/shell/src/PyIDefaultExtractIconInit.cpp',
  'win32comext/shell/src/PyIExplorerPaneVisibility.cpp',
  'win32comext/shell/src/PyIActiveDesktop.cpp',
  'win32comext/shell/src/PyIKnownFolder.cpp',
  'win32comext/shell/src/PyIShellFolder2.cpp',
  'win32comext/shell/src/PyIShellIconOverlayIdentifier.cpp',
  'win32comext/shell/src/PyIContextMenu3.cpp',
  'win32comext/shell/src/PyIShellExtInit.cpp',
  'win32comext/shell/src/PyIContextMenu2.cpp',
  'win32comext/shell/src/PyITransferAdviseSink.cpp',
  'win32comext/shell/src/PyIEmptyVolumeCacheCallBack.cpp',
  'win32comext/shell/src/PyIUniformResourceLocator.cpp',
  'win32comext/shell/src/PyIEmptyVolumeCache.cpp',
  'win32comext/shell/src/PyIShellLinkDataList.cpp',
  'win32comext/shell/src/PyIShellItemResources.cpp',
  'win32comext/shell/src/PyIShellBrowser.cpp',
  'win32comext/shell/src/PyICurrentItem.cpp',
  'win32comext/shell/src/PyIPersistFolder.cpp',
  'win32comext/shell/src/PyIIdentityName.cpp',
  'win32comext/shell/src/PyICopyHook.cpp',
  'win32comext/shell/src/PyIRelatedItem.cpp',
  'win32comext/shell/src/PyITransferMediumItem.cpp',
  'win32comext/shell/src/PyIFileOperationProgressSink.cpp',
  'win32comext/shell/src/PyITransferSource.cpp',
  'win32comext/shell/src/PyICategoryProvider.cpp',
  'win32comext/shell/src/PyIShellItemArray.cpp',
  'win32comext/shell/src/shell.cpp',
  'win32comext/shell/src/PyICategorizer.cpp',
  'win32comext/shell/src/PyIApplicationDocumentLists.cpp',
  'win32comext/shell/src/PyIQueryAssociations.cpp',
  'win32comext/shell/src/PyIExplorerCommandProvider.cpp',
  'win32comext/shell/src/PyIExtractImage.cpp',
  'win32comext/shell/src/PyIExplorerBrowser.cpp',
  'win32comext/shell/src/PyIEnumResources.cpp',
  'win32comext/shell/src/PyIApplicationDestinations.cpp',
  'win32comext/shell/src/PyIEnumShellItems.cpp',
  'win32comext/shell/src/PyIShellIconOverlayManager.cpp',
  'win32comext/shell/src/PyIExplorerBrowserEvents.cpp',
  'win32comext/shell/src/PyIDisplayItem.cpp',
  'win32comext/shell/src/PyIObjectArray.cpp',
  'win32comext/shell/src/PyICustomDestinationList.cpp',
  'win32comext/shell/src/PyIFileOperation.cpp',
  'win32comext/shell/src/PyIKnownFolderManager.cpp',
  'win32comext/shell/src/PyIAsyncOperation.cpp',
  'win32comext/shell/src/PyIShellItem.cpp',
  'win32comext/ifilter/src/PyIFilter.cpp',
  'win32comext/axscript/src/PyGActiveScript.cpp',
  'win32comext/axscript/src/PyIActiveScriptParse.cpp',
  'win32comext/axscript/src/PyIActiveScript.cpp',
  'win32comext/axscript/src/stdafx.cpp',
  'win32comext/axscript/src/PyIActiveScriptParseProcedure.cpp',
  'win32comext/axscript/src/PyGActiveScriptSite.cpp',
  'win32comext/axscript/src/PyIActiveScriptError.cpp',
  'win32comext/axscript/src/PyGActiveScriptError.cpp',
  'win32comext/axscript/src/PyGObjectSafety.cpp',
  'win32comext/axscript/src/PyIObjectSafety.cpp',
  'win32comext/axscript/src/PyGActiveScriptParse.cpp',
  'win32comext/axscript/src/PyIMultiInfos.cpp',
  'win32comext/axscript/src/AXScript.cpp',
  'win32comext/axscript/src/PyIActiveScriptSite.cpp',
  'win32comext/taskscheduler/src/PyIScheduledWorkItem.cpp',
  'win32comext/taskscheduler/src/PyITaskScheduler.cpp',
  'win32comext/taskscheduler/src/PyITaskTrigger.cpp',
  'win32comext/taskscheduler/src/taskscheduler.cpp',
  'win32comext/taskscheduler/src/PyIProvideTaskPage.cpp',
  'win32comext/taskscheduler/src/PyITask.cpp',
  'win32comext/authorization/src/authorization.cpp',
  'win32comext/authorization/src/PyGSecurityInformation.cpp',
  'win32comext/axcontrol/src/PyIOleControlSite.cpp',
  'win32comext/axcontrol/src/PyIObjectWithSite.cpp',
  'win32comext/axcontrol/src/PyIOleInPlaceActiveObject.cpp',
  'win32comext/axcontrol/src/PyIOleClientSite.cpp',
  'win32comext/axcontrol/src/PyIOleInPlaceSite.cpp',
  'win32comext/axcontrol/src/PyIOleControl.cpp',
  'win32comext/axcontrol/src/PyIOleInPlaceSiteEx.cpp',
  'win32comext/axcontrol/src/PyIOleInPlaceFrame.cpp',
  'win32comext/axcontrol/src/PyISpecifyPropertyPages.cpp',
  'win32comext/axcontrol/src/PyIViewObject.cpp',
  'win32comext/axcontrol/src/PyIViewObject2.cpp',
  'win32comext/axcontrol/src/PyIOleInPlaceUIWindow.cpp',
  'win32comext/axcontrol/src/PyIOleInPlaceSiteWindowless.cpp',
  'win32comext/axcontrol/src/PyIOleCommandTarget.cpp',
  'win32comext/axcontrol/src/AXControl.cpp',
  'win32comext/axcontrol/src/PyIOleObject.cpp',
  'win32comext/axcontrol/src/PyIOleInPlaceObject.cpp',
  'win32comext/adsi/src/PyADSIUtil.cpp',
  'win32comext/adsi/src/PyDSOPObjects.cpp',
  'win32comext/adsi/src/PyIADs.cpp',
  'win32comext/mapi/src/mapiutil.cpp',
  'win32comext/mapi/src/mapiguids.cpp',
  'win32comext/mapi/src/mapi_stub_library/MapiStubLibrary.cpp',
  'win32comext/mapi/src/mapi_stub_library/StubUtils.cpp',
  'win32comext/mapi/src/exchangeguids.cpp',
  'win32comext/mapi/src/PyIMAPIAdviseSink.cpp',
  'win32comext/axdebug/src/PyIDebugDocumentInfo.cpp',
  'win32comext/axdebug/src/PyIEnumDebugExpressionContexts.cpp',
  'win32comext/axdebug/src/PyIDebugApplicationNode.cpp',
  'win32comext/axdebug/src/PyIEnumRemoteDebugApplicationThreads.cpp',
  'win32comext/axdebug/src/PyIDebugStackFrameSniffer.cpp',
  'win32comext/axdebug/src/PyIDebugDocumentTextAuthor.cpp',
  'win32comext/axdebug/src/PyIActiveScriptSiteDebug.cpp',
  'win32comext/axdebug/src/stdafx.cpp',
  'win32comext/axdebug/src/PyIDebugExpressionContext.cpp',
  'win32comext/axdebug/src/PyIEnumDebugStackFrames.cpp',
  'win32comext/axdebug/src/PyIActiveScriptErrorDebug.cpp',
  'win32comext/axdebug/src/PyIProcessDebugManager.cpp',
  'win32comext/axdebug/src/PyIDebugApplicationThread.cpp',
  'win32comext/axdebug/src/PyIDebugCodeContext.cpp',
  'win32comext/axdebug/src/PyIMachineDebugManager.cpp',
  'win32comext/axdebug/src/PyIDebugApplicationNodeEvents.cpp',
  'win32comext/axdebug/src/PyIDebugApplication.cpp',
  'win32comext/axdebug/src/PyIDebugSessionProvider.cpp',
  'win32comext/axdebug/src/PyIDebugDocumentHelper.cpp',
  'win32comext/axdebug/src/PyIActiveScriptDebug.cpp',
  'win32comext/axdebug/src/PyIProvideExpressionContexts.cpp',
  'win32comext/axdebug/src/PyIRemoteDebugApplication.cpp',
  'win32comext/axdebug/src/PyIRemoteDebugApplicationEvents.cpp',
  'win32comext/axdebug/src/PyIDebugDocumentTextExternalAuthor.cpp',
  'win32comext/axdebug/src/PyIDebugStackFrameSnifferEx.cpp',
  'win32comext/axdebug/src/PyIDebugDocumentProvider.cpp',
  'win32comext/axdebug/src/PyIApplicationDebugger.cpp',
  'win32comext/axdebug/src/PyIDebugDocument.cpp',
  'win32comext/axdebug/src/PyIDebugDocumentTextEvents.cpp',
  'win32comext/axdebug/src/PyIDebugProperties.cpp',
  'win32comext/axdebug/src/PyIMachineDebugManagerEvents.cpp',
  'win32comext/axdebug/src/PyIDebugSyncOperation.cpp',
  'win32comext/axdebug/src/PyIDebugDocumentContext.cpp',
  'win32comext/axdebug/src/PyIDebugStackFrame.cpp',
  'win32comext/axdebug/src/PyIDebugExpressionCallBack.cpp',
  'win32comext/axdebug/src/PyIEnumDebugApplicationNodes.cpp',
  'win32comext/axdebug/src/PyIDebugExpression.cpp',
  'win32comext/axdebug/src/PyIRemoteDebugApplicationThread.cpp',
  'win32comext/axdebug/src/PyIDebugDocumentHost.cpp',
  'win32comext/axdebug/src/PyIEnumDebugCodeContexts.cpp',
  'win32comext/axdebug/src/PyIDebugDocumentText.cpp',
  'win32comext/axdebug/src/PyIEnumDebugPropertyInfo.cpp',
  'win32comext/axdebug/src/PyIEnumRemoteDebugApplications.cpp',
  'win32comext/axdebug/src/AXDebug.cpp',
  'win32comext/directsound/src/PyDSCCAPS.cpp',
  'win32comext/directsound/src/PyDSCBUFFERDESC.cpp',
  'win32comext/directsound/src/PyIDirectSoundCaptureBuffer.cpp',
  'win32comext/directsound/src/PyDSBCAPS.cpp',
  'win32comext/directsound/src/PyIDirectSoundBuffer.cpp',
  'win32comext/directsound/src/PyDSBUFFERDESC.cpp',
  'win32comext/directsound/src/PyDSCBCAPS.cpp',
  'win32comext/directsound/src/PyIDirectSound.cpp',
  'win32comext/directsound/src/PyIDirectSoundNotify.cpp',
  'win32comext/directsound/src/directsound.cpp',
  'win32comext/directsound/src/PyIDirectSoundCapture.cpp',
  'win32comext/directsound/src/PyDSCAPS.cpp',
  'win32comext/propsys/src/PyIPropertyChange.cpp',
  'win32comext/propsys/src/PyIInitializeWithStream.cpp',
  'win32comext/propsys/src/PyIPropertyChangeArray.cpp',
  'win32comext/propsys/src/PyIInitializeWithFile.cpp',
  'win32comext/propsys/src/PyIPropertyDescription.cpp',
  'win32comext/propsys/src/PyIPropertyDescriptionList.cpp',
  'win32comext/propsys/src/PyIPropertyDescriptionAliasInfo.cpp',
  'win32comext/propsys/src/PyIObjectWithPropertyKey.cpp',
  'win32comext/propsys/src/PyIPropertyStoreCapabilities.cpp',
  'win32comext/propsys/src/PyIPropertyEnumTypeList.cpp',
  'win32comext/propsys/src/propsys.cpp',
  'win32comext/propsys/src/PyIPropertyStoreCache.cpp',
  'win32comext/propsys/src/PyPROPVARIANT.cpp',
  'win32comext/propsys/src/PyIPersistSerializedPropStorage.cpp',
  'win32comext/propsys/src/PyIPropertyDescriptionSearchInfo.cpp',
  'win32comext/propsys/src/PyIPropertyEnumType.cpp',
  'win32comext/propsys/src/PyIPropertySystem.cpp',
  'win32comext/propsys/src/PyIPropertyStore.cpp',
  'win32comext/propsys/src/PyINamedPropertyStore.cpp',
  'win32comext/internet/src/PyIInternetProtocolRoot.cpp',
  'win32comext/internet/src/PyIDocHostUIHandler.cpp',
  'win32comext/internet/src/internet.cpp',
  'win32comext/internet/src/PyIInternetSecurityManager.cpp',
  'win32comext/internet/src/PyIInternetProtocol.cpp',
  'win32comext/internet/src/PyIInternetProtocolInfo.cpp',
  'win32comext/internet/src/PyIInternetPriority.cpp',
  'win32comext/internet/src/PyIHTMLOMWindowServices.cpp',
  'win32comext/internet/src/PyIInternetBindInfo.cpp',
  'win32comext/internet/src/PyIInternetProtocolSink.cpp',
  'win32comext/bits/src/PyIBackgroundCopyManager.cpp',
  'win32comext/bits/src/PyIEnumBackgroundCopyJobs.cpp',
  'win32comext/bits/src/PyIBackgroundCopyJob3.cpp',
  'win32comext/bits/src/PyIEnumBackgroundCopyFiles.cpp',
  'win32comext/bits/src/PyIBackgroundCopyJob2.cpp',
  'win32comext/bits/src/bits.cpp',
  'win32comext/bits/src/PyIBackgroundCopyJob.cpp',
  'win32comext/bits/src/PyIBackgroundCopyFile2.cpp',
  'win32comext/bits/src/PyIBackgroundCopyCallback.cpp',
  'win32comext/bits/src/PyIBackgroundCopyFile.cpp',
  'win32comext/bits/src/PyIBackgroundCopyError.cpp',
  'win32com/src/PyIUnknown.cpp',
  'win32com/src/stdafx.cpp',
  'win32com/src/PythonCOMLoader.cpp',
  'win32com/src/PyGatewayBase.cpp',
  'win32com/src/MiscTypes.cpp',
  'win32com/src/PyStorage.cpp',
  'win32com/src/Register.cpp',
  'win32com/src/dllmain.cpp',
  'win32com/src/univgw.cpp',
  'win32com/src/PyComHelpers.cpp',
  'win32com/src/PyRecord.cpp',
  'win32com/src/extensions/PyIEnumVARIANT.cpp',
  'win32com/src/extensions/PyIEnumConnections.cpp',
  'win32com/src/extensions/PyICreateTypeInfo.cpp',
  'win32com/src/extensions/PyIPersistPropertyBag.cpp',
  'win32com/src/extensions/PySTGMEDIUM.cpp',
  'win32com/src/extensions/PyIProvideClassInfo.cpp',
  'win32com/src/extensions/PyIEnumCATEGORYINFO.cpp',
  'win32com/src/extensions/PyGPersistStreamInit.cpp',
  'win32com/src/extensions/PyGPersistStorage.cpp',
  'win32com/src/extensions/PyIErrorLog.cpp',
  'win32com/src/extensions/PyICatInformation.cpp',
  'win32com/src/extensions/PyIStream.cpp',
  'win32com/src/extensions/PyIEnumConnectionPoints.cpp',
  'win32com/src/extensions/PyITypeObjects.cpp',
  'win32com/src/extensions/PyIMoniker.cpp',
  'win32com/src/extensions/PyIClientSecurity.cpp',
  'win32com/src/extensions/PyIEnumContextProps.cpp',
  'win32com/src/extensions/PyGErrorLog.cpp',
  'win32com/src/extensions/PyIPersistStream.cpp',
  'win32com/src/extensions/PyIConnectionPointContainer.cpp',
  'win32com/src/extensions/PyGEnumVariant.cpp',
  'win32com/src/extensions/PyIOleWindow.cpp',
  'win32com/src/extensions/PyICancelMethodCalls.cpp',
  'win32com/src/extensions/PyIExternalConnection.cpp',
  'win32com/src/extensions/PyIPersistStorage.cpp',
  'win32com/src/extensions/PyIServiceProvider.cpp',
  'win32com/src/extensions/PyIStorage.cpp',
  'win32com/src/extensions/PyIPersistFile.cpp',
  'win32com/src/extensions/PyIPropertyStorage.cpp',
  'win32com/src/extensions/PyIEnumSTATSTG.cpp',
  'win32com/src/extensions/PyIDropSource.cpp',
  'win32com/src/extensions/PyIServerSecurity.cpp',
  'win32com/src/extensions/PyIBindCtx.cpp',
  'win32com/src/extensions/PyICatRegister.cpp',
  'win32com/src/extensions/PyTYPEATTR.cpp',
  'win32com/src/extensions/PyIRunningObjectTable.cpp',
  'win32com/src/extensions/PyIDropTarget.cpp',
  'win32com/src/extensions/PyIEnumSTATPROPSTG.cpp',
  'win32com/src/extensions/PyICreateTypeLib2.cpp',
  'win32com/src/extensions/PyGStream.cpp',
  'win32com/src/extensions/PyGPersistPropertyBag.cpp',
  'win32com/src/extensions/PyIGlobalInterfaceTable.cpp',
  'win32com/src/extensions/PyIDataObject.cpp',
  'win32com/src/extensions/PyIPropertyBag.cpp',
  'win32com/src/extensions/PyIEnumFORMATETC.cpp',
  'win32com/src/extensions/PyGConnectionPointContainer.cpp',
  'win32com/src/extensions/PyIContext.cpp',
  'win32com/src/extensions/PyIEnumString.cpp',
  'win32com/src/extensions/PyFUNCDESC.cpp',
  'win32com/src/extensions/PyGPersist.cpp',
  'win32com/src/extensions/PyIEnumGUID.cpp',
  'win32com/src/extensions/PyVARDESC.cpp',
  'win32com/src/extensions/PyGPropertyBag.cpp',
  'win32com/src/extensions/PyIConnectionPoint.cpp',
  'win32com/src/extensions/PyIPersistStreamInit.cpp',
  'win32com/src/extensions/PyIEnumSTATPROPSETSTG.cpp',
  'win32com/src/extensions/PyIPersist.cpp',
  'win32com/src/extensions/PyIPropertySetStorage.cpp',
  'win32com/src/extensions/PyGConnectionPoint.cpp',
  'win32com/src/extensions/PyGPersistStream.cpp',
  'win32com/src/extensions/PyIType.cpp',
  'win32com/src/extensions/PyILockBytes.cpp',
  'win32com/src/extensions/PyICreateTypeLib.cpp',
  'win32com/src/PyFactory.cpp',
  'win32com/src/PyIClassFactory.cpp',
  'win32com/src/PythonCOM.cpp',
  'win32com/src/oleargs.cpp',
  'win32com/src/PyIBase.cpp',
  'win32com/src/ErrorUtils.cpp',
  'win32com/src/univgw_dataconv.cpp',
  'win32com/src/PyIDispatch.cpp',
)
