win32_inc = include_directories(
  'src',
  'src/PerfMon',
  'src/win32crypt',
  'src/win32net',
  'src/win32wnet',
)

win32_src = files(
  'src/win32clipboardmodule.cpp',
  #'src/wincerapi_reg.cpp',
  'src/win32trace.cpp',
  'src/PythonService.cpp',
  'src/win32rasmodule.cpp',
  'src/win2krasmodule.cpp',
  'src/timermodule.cpp',
  'src/win32security_sspi.cpp',
  'src/win32credmodule.cpp',
  'src/win32helpmodule.cpp',
  'src/win32apimodule.cpp',
  'src/win32print/win32print.cpp',
  'src/win32net/win32netmodule.cpp',
  'src/win32net/win32netsession.cpp',
  'src/win32net/win32netuse.cpp',
  'src/win32net/win32netgroup.cpp',
  'src/win32net/win32netfile.cpp',
  'src/win32net/win32netuser.cpp',
  'src/win32net/win32netmisc.cpp',
  'src/mmapfilemodule.cpp',
  'src/win32transactionmodule.cpp',
  'src/win32tsmodule.cpp',
  'src/win32file_comm.cpp',
  'src/PyHANDLE.cpp',
  'src/PyOVERLAPPED.cpp',
  'src/win32inet_winhttp.cpp',
  #'src/win32dynamicdialog.cpp',
  'src/win32wnet/PyNCB.cpp',
  'src/win32wnet/win32wnet.cpp',
  'src/win32wnet/PyNetresource.cpp',
  'src/_win32sysloader.cpp',
  'src/PyUnicode.cpp',
  'src/PyLARGE_INTEGER.cpp',
  'src/PyWAVEFORMATEX.cpp',
  'src/PerfMon/PyPerfMon.cpp',
  'src/PerfMon/perfmondata.cpp',
  'src/PerfMon/PerfCounterDefn.cpp',
  'src/PerfMon/PerfObjectType.cpp',
  'src/PerfMon/MappingManager.cpp',
  'src/win32security_ds.cpp',
  'src/PyIID.cpp',
  'src/win32profilemodule.cpp',
  'src/PyDEVMODE.cpp',
  'src/odbc.cpp',
  'src/win32popen.cpp',
  'src/PySECURITY_DESCRIPTOR.cpp',
  'src/win32consolemodule.cpp',
  'src/win32api_display.cpp',
  'src/PySID.cpp',
  'src/win32crypt/PyCRYPTKEY.cpp',
  'src/win32crypt/win32cryptmodule.cpp',
  'src/win32crypt/win32crypt_structs.cpp',
  'src/win32crypt/PyCTL_CONTEXT.cpp',
  'src/win32crypt/PyCRYPTPROV.cpp',
  'src/win32crypt/PyCRYPTHASH.cpp',
  'src/win32crypt/PyCERT_CONTEXT.cpp',
  'src/win32crypt/PyCRYPTMSG.cpp',
  'src/win32crypt/PyCERTSTORE.cpp',
  'src/PyTime.cpp',
  'src/win32pdhmodule.cpp',
  'src/PyWinTypesmodule.cpp',
  'src/win32lzmodule.cpp',
  'src/PyACL.cpp',
  'src/PySECURITY_ATTRIBUTES.cpp',
)

win32_swig = files(
  'src/win32event.i',
  'src/win32gui.i',
  'src/win32pipe.i',
  'src/win32evtlog.i',
  'src/_winxptheme.i',
  #'src/wincerapi.i',
  'src/win32job.i',
  'src/win32service.i',
  'src/win32process.i',
  'src/win32security.i',
  'src/win32file.i',
  'src/win32inet.i',
)

win32_mc = files(
  'src/win32evtlog_messages.mc',
  'src/PerfMon/PyPerfMsgs.mc',
  'src/PythonServiceMessages.mc',
  'src/win32service_messages.mc',
)
