scintilla_inc = include_directories('src', 'include')

scintilla_src = files(
  'src/AutoComplete.cxx',
  'src/CallTip.cxx',
  'src/CellBuffer.cxx',
  'src/CharClassify.cxx',
  'src/ContractionState.cxx',
  'src/Decoration.cxx',
  'src/DocumentAccessor.cxx',
  'src/Document.cxx',
  'src/Editor.cxx',
  'src/ExternalLexer.cxx',
  'src/Indicator.cxx',
  'src/KeyMap.cxx',
  'src/KeyWords.cxx',
  'src/LexAbaqus.cxx',
  'src/LexAda.cxx',
  'src/LexAPDL.cxx',
  'src/LexAsm.cxx',
  'src/LexAsn1.cxx',
  'src/LexASY.cxx',
  'src/LexAU3.cxx',
  'src/LexAVE.cxx',
  'src/LexBaan.cxx',
  'src/LexBash.cxx',
  'src/LexBasic.cxx',
  'src/LexBullant.cxx',
  'src/LexCaml.cxx',
  'src/LexCLW.cxx',
  'src/LexCmake.cxx',
  'src/LexConf.cxx',
  'src/LexCPP.cxx',
  'src/LexCrontab.cxx',
  'src/LexCsound.cxx',
  'src/LexCSS.cxx',
  'src/LexD.cxx',
  'src/LexEiffel.cxx',
  'src/LexErlang.cxx',
  'src/LexEScript.cxx',
  'src/LexFlagship.cxx',
  'src/LexForth.cxx',
  'src/LexFortran.cxx',
  'src/LexGAP.cxx',
  'src/LexGui4Cli.cxx',
  'src/LexHaskell.cxx',
  'src/LexHTML.cxx',
  'src/LexInno.cxx',
  'src/LexKix.cxx',
  'src/LexLisp.cxx',
  'src/LexLout.cxx',
  'src/LexLua.cxx',
  'src/LexMagik.cxx',
  'src/LexMatlab.cxx',
  'src/LexMetapost.cxx',
  'src/LexMMIXAL.cxx',
  'src/LexMPT.cxx',
  'src/LexMSSQL.cxx',
  'src/LexMySQL.cxx',
  'src/LexNsis.cxx',
  'src/LexOpal.cxx',
  'src/LexOthers.cxx',
  'src/LexPascal.cxx',
  'src/LexPB.cxx',
  'src/LexPerl.cxx',
  'src/LexPLM.cxx',
  'src/LexPOV.cxx',
  'src/LexPowerShell.cxx',
  'src/LexProgress.cxx',
  'src/LexPS.cxx',
  'src/LexPython.cxx',
  'src/LexR.cxx',
  'src/LexRebol.cxx',
  'src/LexRuby.cxx',
  'src/LexScriptol.cxx',
  'src/LexSmalltalk.cxx',
  'src/LexSpecman.cxx',
  'src/LexSpice.cxx',
  'src/LexSQL.cxx',
  'src/LexTADS3.cxx',
  'src/LexTCL.cxx',
  'src/LexTeX.cxx',
  'src/LexVB.cxx',
  'src/LexVerilog.cxx',
  'src/LexVHDL.cxx',
  'src/LexYAML.cxx',
  'src/LineMarker.cxx',
  'src/PositionCache.cxx',
  'src/PropSet.cxx',
  'src/RESearch.cxx',
  'src/RunStyles.cxx',
  'src/ScintillaBase.cxx',
  'src/StyleContext.cxx',
  'src/Style.cxx',
  'src/UniConversion.cxx',
  'src/ViewStyle.cxx',
  'src/WindowAccessor.cxx',
  'src/XPM.cxx',
  'win32/ScintillaWin.cxx',
  'win32/PlatWin.cxx',
)
